src/interpreters/stringfilterinterpreter/stringFilterParser.output
Grammar

    0 $accept: StringFilterSpecification $end

    1 $@1: ε

    2 StringFilterSpecification: $@1 Expression

    3 Expression: Term
    4           | Expression "&" Term
    5           | Expression "^" Term

    6 Term: Factor
    7     | Term "|" Factor

    8 Factor: BasicFactor
    9       | "=" BasicFactor

   10 BasicFactor: String
   11            | SubExpression

   12 SubExpression: "(" Expression ")"

   13 SingleString: "single quoted string"
   14             | "double quoted string"

   15 String: SingleString
   16       | String SingleString


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "&" (258) 4
    "^" (259) 5
    "|" (260) 7
    "=" (261) 9
    "(" (262) 12
    ")" (263) 12
    "single quoted string" <std::string> (264) 13
    "double quoted string" <std::string> (265) 14


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    StringFilterSpecification <S_stringFilterNode> (12)
        on left: 2
        on right: 0
    $@1 (13)
        on left: 1
        on right: 2
    Expression <S_stringFilterNode> (14)
        on left: 3 4 5
        on right: 2 4 5 12
    Term <S_stringFilterNode> (15)
        on left: 6 7
        on right: 3 4 5 7
    Factor <S_stringFilterNode> (16)
        on left: 8 9
        on right: 6 7
    BasicFactor <S_stringFilterNode> (17)
        on left: 10 11
        on right: 8 9
    SubExpression <S_stringFilterNode> (18)
        on left: 12
        on right: 11
    SingleString <std::string> (19)
        on left: 13 14
        on right: 15 16
    String <std::string> (20)
        on left: 15 16
        on right: 10 16


State 0

    0 $accept: • StringFilterSpecification $end

    $default  reduce using rule 1 ($@1)

    StringFilterSpecification  go to state 1
    $@1                        go to state 2


State 1

    0 $accept: StringFilterSpecification • $end

    $end  shift, and go to state 3


State 2

    2 StringFilterSpecification: $@1 • Expression

    "="                     shift, and go to state 4
    "("                     shift, and go to state 5
    "single quoted string"  shift, and go to state 6
    "double quoted string"  shift, and go to state 7

    Expression     go to state 8
    Term           go to state 9
    Factor         go to state 10
    BasicFactor    go to state 11
    SubExpression  go to state 12
    SingleString   go to state 13
    String         go to state 14


State 3

    0 $accept: StringFilterSpecification $end •

    $default  accept


State 4

    9 Factor: "=" • BasicFactor

    "("                     shift, and go to state 5
    "single quoted string"  shift, and go to state 6
    "double quoted string"  shift, and go to state 7

    BasicFactor    go to state 15
    SubExpression  go to state 12
    SingleString   go to state 13
    String         go to state 14


State 5

   12 SubExpression: "(" • Expression ")"

    "="                     shift, and go to state 4
    "("                     shift, and go to state 5
    "single quoted string"  shift, and go to state 6
    "double quoted string"  shift, and go to state 7

    Expression     go to state 16
    Term           go to state 9
    Factor         go to state 10
    BasicFactor    go to state 11
    SubExpression  go to state 12
    SingleString   go to state 13
    String         go to state 14


State 6

   13 SingleString: "single quoted string" •

    $default  reduce using rule 13 (SingleString)


State 7

   14 SingleString: "double quoted string" •

    $default  reduce using rule 14 (SingleString)


State 8

    2 StringFilterSpecification: $@1 Expression •
    4 Expression: Expression • "&" Term
    5           | Expression • "^" Term

    "&"  shift, and go to state 17
    "^"  shift, and go to state 18

    $default  reduce using rule 2 (StringFilterSpecification)


State 9

    3 Expression: Term •
    7 Term: Term • "|" Factor

    "|"  shift, and go to state 19

    $default  reduce using rule 3 (Expression)


State 10

    6 Term: Factor •

    $default  reduce using rule 6 (Term)


State 11

    8 Factor: BasicFactor •

    $default  reduce using rule 8 (Factor)


State 12

   11 BasicFactor: SubExpression •

    $default  reduce using rule 11 (BasicFactor)


State 13

   15 String: SingleString •

    $default  reduce using rule 15 (String)


State 14

   10 BasicFactor: String •
   16 String: String • SingleString

    "single quoted string"  shift, and go to state 6
    "double quoted string"  shift, and go to state 7

    $default  reduce using rule 10 (BasicFactor)

    SingleString  go to state 20


State 15

    9 Factor: "=" BasicFactor •

    $default  reduce using rule 9 (Factor)


State 16

    4 Expression: Expression • "&" Term
    5           | Expression • "^" Term
   12 SubExpression: "(" Expression • ")"

    "&"  shift, and go to state 17
    "^"  shift, and go to state 18
    ")"  shift, and go to state 21


State 17

    4 Expression: Expression "&" • Term

    "="                     shift, and go to state 4
    "("                     shift, and go to state 5
    "single quoted string"  shift, and go to state 6
    "double quoted string"  shift, and go to state 7

    Term           go to state 22
    Factor         go to state 10
    BasicFactor    go to state 11
    SubExpression  go to state 12
    SingleString   go to state 13
    String         go to state 14


State 18

    5 Expression: Expression "^" • Term

    "="                     shift, and go to state 4
    "("                     shift, and go to state 5
    "single quoted string"  shift, and go to state 6
    "double quoted string"  shift, and go to state 7

    Term           go to state 23
    Factor         go to state 10
    BasicFactor    go to state 11
    SubExpression  go to state 12
    SingleString   go to state 13
    String         go to state 14


State 19

    7 Term: Term "|" • Factor

    "="                     shift, and go to state 4
    "("                     shift, and go to state 5
    "single quoted string"  shift, and go to state 6
    "double quoted string"  shift, and go to state 7

    Factor         go to state 24
    BasicFactor    go to state 11
    SubExpression  go to state 12
    SingleString   go to state 13
    String         go to state 14


State 20

   16 String: String SingleString •

    $default  reduce using rule 16 (String)


State 21

   12 SubExpression: "(" Expression ")" •

    $default  reduce using rule 12 (SubExpression)


State 22

    4 Expression: Expression "&" Term •
    7 Term: Term • "|" Factor

    "|"  shift, and go to state 19

    $default  reduce using rule 4 (Expression)


State 23

    5 Expression: Expression "^" Term •
    7 Term: Term • "|" Factor

    "|"  shift, and go to state 19

    $default  reduce using rule 5 (Expression)


State 24

    7 Term: Term "|" Factor •

    $default  reduce using rule 7 (Term)
